// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`writerTsDefinition > "default" module name 1`] = `
"
  /// <reference types=\\"svelte\\" />
  import type { SvelteComponentTyped } from \\"svelte\\";
  
  
  
  
    export interface defaultProps  {
      
    }
  
  
  export default class  extends SvelteComponentTyped<
      defaultProps,
      {},
      {}
    > {
      
    }"
`;

exports[`writerTsDefinition > $$restProps extend modern HTML types 1`] = `
"
  /// <reference types=\\"svelte\\" />
  import type { SvelteComponentTyped } from \\"svelte\\";
  
import type { SvelteHTMLElements } from 'svelte/elements'
  
  
  
    export interface defaultProps extends Partial<SvelteHTMLElements[\\"div\\"]> {
      
      
      [key: \`data-\${string}\`]: any;
    }
  
  
  export default class  extends SvelteComponentTyped<
      defaultProps,
      {},
      {}
    > {
      
    }"
`;

exports[`writerTsDefinition > writeTsDefinition 1`] = `
"
  /// <reference types=\\"svelte\\" />
  import type { SvelteComponentTyped } from \\"svelte\\";
  
  
  
  
    export interface ModuleNameProps  {
      
      /**
* @default true
*/
      propBool?: boolean;

      /**
* @default \\"\\"
*/
      propString?: string;

      /**
* @default undefined
*/
      name?: string;

      /**
* @default \\"\\" + Math.random().toString(36)
*/
      id?: string;

      /**
* @default () => { localBool = !localBool; }
*/
      fn?: () => {     localBool = !localBool;   };
    }
  
  
  export default class ModuleName extends SvelteComponentTyped<
      ModuleNameProps,
      {},
      {default: {}
;}
    > {
      
    
    propConst: { [key: string]: boolean; };
    }"
`;
